# zlib-sgx

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindSGX.cmake
examples/: CMakeLists.txt
examples/compress_decompress/: CMakeLists.txt
examples/compress_decompress/trusted/: CMakeLists.txt  compress_decompress.cpp  compress_decompress.edl  compress_decompress.h  compress_decompress.lds
examples/compress_decompress/untrusted/: CMakeLists.txt  app.cpp  app.h
trusted/: CMakeLists.txt
trusted/include/: fcntl.h
