set(ENCLAVE_NAME compress_decompress)

set(EXAMPLE_TRUSTED_DIR ${CMAKE_CURRENT_SOURCE_DIR}/trusted)
set(EXAMPLE_UNTRUSTED_DIR ${CMAKE_CURRENT_SOURCE_DIR}/untrusted)
set(EXAMPLE_EDL_FILE ${EXAMPLE_TRUSTED_DIR}/${ENCLAVE_NAME}.edl)
set(EXAMPLE_LDS_FILE ${EXAMPLE_TRUSTED_DIR}/${ENCLAVE_NAME}.lds)

add_subdirectory(${EXAMPLE_UNTRUSTED_DIR})
add_subdirectory(${EXAMPLE_TRUSTED_DIR})
